# RustLangFun

./: .gitignore  README.md
Todo-List-Server/: Cargo.toml  diesel.toml
Todo-List-Server/src/: main.rs  models.rs  schema.rs  todo.rs
Todo-List-Server/static/: about.html  hello.txt  something.md
advent_of_code_2021/: Cargo.toml
advent_of_code_2021/data/: day17.txt  test_data.txt
advent_of_code_2021/src/: data_tools.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
advent_of_code_2022/: Cargo.toml  notes.md
advent_of_code_2022/data/: day11.txt  day18.txt  day23.txt  day5.txt  day8.txt
advent_of_code_2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
advent_of_code_2023/: Cargo.toml  README.md
advent_of_code_2023/input/: Untitled-1  day10.txt
advent_of_code_2023/src/: main.rs  utils.rs
algorithms/: Cargo.toml
algorithms/src/: cube.rs  fibonacci.rs  main.rs
bevy-snake-game/: Cargo.toml
bevy-snake-game/src/: main.rs
blackjack/: Cargo.toml
blackjack/src/: blackjack.rs  blackjack_sim.rs  card.rs  deck.rs  hand.rs  main.rs  user.rs
docs_and_tests/: Cargo.toml
docs_and_tests/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
http-server/: Cargo.toml
http-server/src/: main.rs
mine-sweep-wasm/: Cargo.toml  LICENSE_MIT
mine-sweep-wasm/src/: lib.rs  minesweeper.rs
minesweeper2/: Cargo.toml
minesweeper2/src/: lib.rs  minesweeper.rs  minesweeper2.rs
minesweeper2/tests/: web.rs
minesweeper2/www/: index.html  index.js  package-lock.json  package.json
minesweeper_wasm/: Cargo.toml
minesweeper_wasm/src/: lib.rs  main.rs  minesweeper.rs
parallel_test/: Cargo.toml
parallel_test/src/: main.rs
pyext-myrustlib/: Cargo.toml
pyext-myrustlib/python/: test.py
pyext-myrustlib/src/: lib.rs
pyext-pairscorrelation/: Cargo.toml
pyext-pairscorrelation/python/: test.py
pyext-pairscorrelation/src/: lib.rs
recipe_axum_graphql_webserver/: Cargo.toml  README.md
recipe_axum_graphql_webserver/src/: main.rs
recipe_axum_graphql_webserver/src/model/: mod.rs
recipe_axum_graphql_webserver/src/routes/: mod.rs
regex_builder/: Cargo.toml
stonks/: Cargo.toml
stonks/src/: hello.rs  (+4 more)
(+51 files in other folders)
