[package]
name = "todo_list_server"
version = "0.1.0"
authors = ["Bry <bmeilingsports@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_codegen = "0.4.11"
diesel = { version = "^1.4.7", features = ["postgres"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.10"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
env_logger = "0.9.0"
log = "0.4.17"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[default.databases.sqlite_logs]
url = "/RustLangFun/Todo-List-Server/db/"

[default.databases.db_name]
url = "db.sqlite"

min_connections = 64
max_connections = 1024
connect_timeout = 5
idle_timeout = 120
